[gd_scene format=3 uid="uid://d2qv2ejg8a6kv"]

[ext_resource type="Script" path="res://UI/settings_menu.gd" id="1_settings"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.15, 0.2, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MapSizeContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MapSizeLabel" type="Label" parent="Panel/VBoxContainer/MapSizeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Map Size"
horizontal_alignment = 1

[node name="MapWidthContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MapSizeContainer"]
layout_mode = 2
alignment = 1

[node name="WidthLabel" type="Label" parent="Panel/VBoxContainer/MapSizeContainer/MapWidthContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Width:"

[node name="MapWidthInput" type="SpinBox" parent="Panel/VBoxContainer/MapSizeContainer"]
layout_mode = 2
min_value = 10.0
max_value = 40.0
value = 20.0
alignment = 1

[node name="MapHeightContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MapSizeContainer"]
layout_mode = 2
alignment = 1

[node name="HeightLabel" type="Label" parent="Panel/VBoxContainer/MapSizeContainer/MapHeightContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Height:"

[node name="MapHeightInput" type="SpinBox" parent="Panel/VBoxContainer/MapSizeContainer"]
layout_mode = 2
min_value = 10.0
max_value = 40.0
value = 20.0
alignment = 1

[node name="EnemyContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EnemyLabel" type="Label" parent="Panel/VBoxContainer/EnemyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Enemy Count"
horizontal_alignment = 1

[node name="EnemyCountInput" type="SpinBox" parent="Panel/VBoxContainer/EnemyContainer"]
layout_mode = 2
min_value = 1.0
max_value = 20.0
value = 5.0
alignment = 1

[node name="DifficultyContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DifficultyLabel" type="Label" parent="Panel/VBoxContainer/DifficultyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Difficulty"
horizontal_alignment = 1

[node name="DifficultyOption" type="OptionButton" parent="Panel/VBoxContainer/DifficultyContainer"]
layout_mode = 2
alignment = 1

[node name="DifficultyInfo" type="Label" parent="Panel/VBoxContainer/DifficultyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Easy: Player HP 5, Enemy HP 2, Drop 50%
Normal: Player HP 3, Enemy HP 3, Drop 30%
Hard: Player HP 2, Enemy HP 4, Drop 15%"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Back"
